[package]
name = "wisp-core"
description = "Core data structures, cryptography, and networking primitives for the Wisp blockchain."
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.97"
bigdecimal = "0.4.7"
bincode = "1.3.3"
bip32 = "0.5.3"
bip39 = "2.1.0"
chrono = { version = "0.4.39", features = ["serde"] }
ecdsa = { version = "0.16.9", features = [
    "signing",
    "verifying",
    "serde",
    "pem",
] }
flume = "0.11.1"
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["serde", "pem"] }
log = "0.4.27"
pem = "3.0.5"
rand = "0.8"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = { version = "3.12.0", features = ["chrono", "hex"] }
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
uint = "0.10.0"
uuid = { version = "1.13.1", features = ["v4", "serde"] }
zeroize = "1.8.1"
