[package]
name = "wisp-wallet"
description = "A command-line interface wallet for managing Wisp coins and interacting with the network."
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.86"
wisp-core = { path = "../wisp-core" }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.140"
argon2 = "0.5.3"
ecdsa = { version = "0.16.9", features = [
    "signing",
    "verifying",
    "serde",
    "pem",
] }
k256 = { version = "0.13.4", features = ["serde", "pem"] }
inquire = "0.7.5"
tokio-stream = "0.1.17"
dirs = "6.0.0"
clap = { version = "4.5.40", features = ["derive"] }
termion = "4.0.5"
log = "0.4.27"
env_logger = "0.11.8"
futures = "0.3.31"
password-hash = "0.5.0"
base64 = "0.22.1"
hex = "0.4.3"
toml = "0.8.23"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.8"
aes-gcm = "0.10.3"
